app/assets/stylesheets/_variables.css.scss
// Base Typography

$font-body: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
$font-headline: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;

// Base Colors

$white:         #FFFFFF;
$lightest-gray: #F2F7F8;
$light-gray:    #DBE8EB;
$gray:          #C6D1D4;
$dark-gray:     #909799;
$light-black:   #393C41;
$black:         #333333;

$light-red:     #FF6C6C;
$red:           #FF4B4B;
$dark-red:      #D74648;

$bright-blue:   #1EA4F4;
$light-blue:    #60DEF1;
$blue:          #46C4D7;
$dark-blue:     #16A0B5;

$light-green:   #9CDE6B;
$green:         #82C451;
$dark-green:    #68AA37;

$light-yellow:  #EFF160;
$yellow:        #EDDA3B;
$dark-yellow:   #CF9F2B;

// Logical Colors

$muted      : $light-gray;
$weak       : $lightest-gray;
$primary    : $blue;
$success    : $green;
$warning    : $yellow;
$danger     : $red;
$highlight  : #FEA;

$secondary  : $success;
$error      : $danger;

$text-color: $black;

// Avatar

$avatar-default-size: 30px;
$avatar-default-font-size: 18px;

// Btn

$btn-border-radius: 99px;
$btn-border-width: 2px;
$btn-default-padding: 3px 20px;
$btn-large-padding: 10px 50px;

// Navbar

$navbar-default-color: $white;
$navbar-default-bg: $light-black;
$navbar-default-border: lighten($light-black, 10%);
$navbar-default-link-color: $white;
$navbar-default-link-active-color: darken($white, 10%);
$navbar-default-link-active-bg: darken($light-black, 10%);
$navbar-default-link-hover-bg: darken($light-black, 10%);
$navbar-default-link-hover-color: darken($white, 10%);
$navbar-margin-bottom: 0;
$navbar-default-brand-bg: $dark-blue;

// Container

$container-md: 540px;
$container-lg: 740px;

